--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include AUTHORS LICENSE MANIFEST.in README.creole 
+include AUTHORS LICENSE MANIFEST.in README.md
 recursive-exclude * *.pyc 
 recursive-exclude * *.pyo
