--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include AUTHORS LICENSE MANIFEST.in README.rst
+include AUTHORS LICENSE MANIFEST.in README.rst HISTORY.rst
 recursive-exclude * *.pyc 
 recursive-exclude * *.pyo
